# slm-kairo

./: Cargo.toml  README.md
config/: default.toml
crates/kairo-core/: Cargo.toml
crates/kairo-core/src/: config.rs  error.rs  event_bus.rs  lib.rs  plugin_loader.rs  plugin_trait.rs  types.rs
crates/kairo-plugin-evaluator/: Cargo.toml
crates/kairo-plugin-evaluator/src/: lib.rs
crates/kairo-plugin-gateway-discord/: Cargo.toml
crates/kairo-plugin-gateway-discord/src/: lib.rs
crates/kairo-plugin-inference/: Cargo.toml
crates/kairo-plugin-inference/src/: lib.rs
crates/kairo-plugin-memory-search/: Cargo.toml
crates/kairo-plugin-memory-search/src/: lib.rs
crates/kairo-plugin-memory-store/: Cargo.toml
crates/kairo-plugin-memory-store/src/: lib.rs
crates/kairo-plugin-session/: Cargo.toml
crates/kairo-plugin-session/src/: lib.rs
crates/kairo-plugin-story/: Cargo.toml
crates/kairo-plugin-story/src/: lib.rs
crates/kairo-plugin-tools/: Cargo.toml
crates/kairo-plugin-tools/src/: lib.rs
docs/: design.md  new-agent-design.md
scripts/ft/: deploy.py  extract_discord.py  fuse.py  pipeline.py  prepare.py  train.py
src/: main.rs
