[package]
name = "kairo-plugin-gateway-discord"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.8"
kairo-core = { path = "../kairo-core" }
async-trait = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
serenity = { version = "0.12", features = ["client", "gateway", "model"] }
tokio = { version = "1", features = ["full"] }
kairo-plugin-inference = { path = "../kairo-plugin-inference" }
kairo-plugin-session = { path = "../kairo-plugin-session" }
kairo-plugin-evaluator = { path = "../kairo-plugin-evaluator" }
