[package]
name = "kairo-plugin-inference"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.8"
kairo-core = { path = "../kairo-core" }
async-trait = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
